Version 1.13.8+dev:
 * User Interface:
   * Enable the use of tab to switch between text fields in most dialogs.

Version 1.13.8:
  * Campaigns:
   * Son of the Black-Eye:
     * Balancing changes for 'Silent Forest'.
   * Under the Burning Suns:
     * New sprites for Quenoth Youth (Kaleh and Nym) and Human Commander.
     * Applied a color shift to the human units in S8 and S9 to give them a more
       unique look.
 * Editor:
   * Fixed a crash when placing units.
   * Restored the ability to preview different ToDs. Note this still does not
     work when invoked form the Custom ToD window.
   * Fixed editor sides not having the correct side number.
   * Redesigned Windows, Areas, and Sides menus.
   * The Windows menu will now display maps starting from 1 rather than 0.
     This is likewise reflected in the default map filename.
   * Scenario names are now displayed in more places if available.
 * Formula Engine:
   * Fixed garbage data showing up in stack traces in the event of an error.
   * Object types can now be used in contexts where previously only a list or
     map was accepted - for example in the filter() function. They will be
     treated as a map in such cases.
 * Graphics:
   * Fixed items not receiving ToD lighting.
   * Portraits for many Walking Corpse and Soulless race variants.
   * New animations: Dwarvish Fighter idle.
 * Language and i18n:
   * Updated translations: British English, Chinese (Simplified), Lithuanian,
     Slovak, Spanish
 * Lua Engine:
   * Add wesnoth.log_replay which exposes a little-used functionality of
     injecting arbitrary logging data into a saved game.
   * Small change to animator API - facing parameter replaced with target and
     required to be a space adjacent to the unit.
   * New modifiable theme attribute in wesnoth.game_config
   * New wesnoth.zoom() function allows changing the zoom level
   * The wesnoth.scroll function scrolls the screen by an offset, similar to