@@ -1,4 +1,6 @@
 Version 1.13.8+dev:
+ * Lua API:
+   * Add wesnoth.format function to substitute variables into a string.
  * User Interface:
    * Enable the use of tab to switch between text fields in most dialogs.
 
